--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     "@mui/icons-material": "^5.16.11",
     "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.20",
+    "@prisma/client": "^6.0.1",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
     "lodash": "^4.17.21",
+    "mongodb": "^6.12.0",
     "next": "^14.0.4",
     "nprogress": "^0.2.0",
+    "prisma": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
