--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "^10.16.16",
     "lodash": "^4.17.21",
     "mongodb": "^6.12.0",
+    "motion": "^11.15.0",
     "next": "^14.0.4",
     "nprogress": "^0.2.0",
     "prisma": "^6.0.1",
